[gd_scene load_steps=26 format=3 uid="uid://bjcjl3qla8b62"]

[ext_resource type="Script" path="res://tactical_mode/unit/unit.gd" id="1_mm6vi"]
[ext_resource type="Script" path="res://tactical_mode/unit/attack_ability.gd" id="2_c8nxh"]
[ext_resource type="Script" path="res://tactical_mode/unit/characteristic.gd" id="2_tlmj2"]
[ext_resource type="Resource" uid="uid://bfvhjwkefx6ky" path="res://tactical_mode/unit/SmolItto/IttoA1.tres" id="3_cs53s"]
[ext_resource type="Script" path="res://tactical_mode/unit/components/StatComponent.gd" id="3_d7s85"]
[ext_resource type="PackedScene" uid="uid://crlfebewxivdg" path="res://tactical_mode/unit/components/InventoryComponent.tscn" id="3_yurj5"]
[ext_resource type="Resource" uid="uid://cc4ld682tyt0b" path="res://tactical_mode/unit/SmolItto/IttoA2.tres" id="4_22bg3"]
[ext_resource type="Texture2D" uid="uid://b7oowqmoun462" path="res://tactical_mode/unit/SmolItto/Smoltto.png" id="4_n8og0"]
[ext_resource type="Resource" uid="uid://bu3x836fsv2io" path="res://tactical_mode/unit/SmolItto/IttoP1.tres" id="5_avjec"]
[ext_resource type="Texture2D" uid="uid://bnrso7wulcsws" path="res://tactical_mode/assets/Shadow.png" id="5_th3mn"]
[ext_resource type="PackedScene" uid="uid://c3oc0616pppep" path="res://GUI/inventory/stat_progress_bar.tscn" id="6_7tt4r"]
[ext_resource type="Script" path="res://tactical_mode/unit/components/ExpirienceComponent.gd" id="7_cpjad"]

[sub_resource type="Resource" id="Resource_8vw01"]
script = ExtResource("2_tlmj2")
base = 100.0
cur = 100.0
max_ = 100.0

[sub_resource type="Resource" id="Resource_7y6a4"]
script = ExtResource("3_d7s85")
mod_type = 0
characteristic = SubResource("Resource_8vw01")

[sub_resource type="Resource" id="Resource_nl3sy"]
script = ExtResource("2_tlmj2")
base = 0.0
cur = 0.0
max_ = 0.0

[sub_resource type="Resource" id="Resource_6jy48"]
script = ExtResource("3_d7s85")
mod_type = 3
characteristic = SubResource("Resource_nl3sy")

[sub_resource type="Resource" id="Resource_uow0a"]
script = ExtResource("2_tlmj2")
base = 100.0
cur = 100.0
max_ = 100.0

[sub_resource type="Resource" id="Resource_b0lp5"]
script = ExtResource("3_d7s85")
mod_type = 1
characteristic = SubResource("Resource_uow0a")

[sub_resource type="Resource" id="Resource_dkxsi"]
script = ExtResource("2_tlmj2")
base = 100.0
cur = 100.0
max_ = 100.0

[sub_resource type="Resource" id="Resource_7l1dn"]
script = ExtResource("3_d7s85")
mod_type = 2
characteristic = SubResource("Resource_dkxsi")

[sub_resource type="Resource" id="Resource_x273b"]
script = ExtResource("2_c8nxh")
distance = 1
power_p = 1.0
targets = 1
max_targets = 0
acts = 1
final_act = true
cooldown = 0
limit = 0
count = -1
scaling_type = 4
type = 4
_mods = Array[Resource("res://tactical_mode/unit/mod.gd")]([])
name = ""
description = ""
max_stack = 0
recipe = Array[Resource("res://inventory/item.gd")]([])
price = 0

[sub_resource type="Gradient" id="Gradient_ns4pf"]
offsets = PackedFloat32Array(0, 0.992327)
colors = PackedColorArray(1, 1, 0.788235, 1, 0.133333, 0.133333, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j8q1x"]
gradient = SubResource("Gradient_ns4pf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_74otp"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_j8q1x")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0v1vj"]
radius = 11.0
height = 54.0

[node name="SmolItto" type="CharacterBody2D" node_paths=PackedStringArray("inventory", "expirience", "sprite_for_outline", "trail_particles", "health_bar_pb")]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_mm6vi")
unit_name = "Смол Итто"
inventory = NodePath("InventoryComponent")
health = SubResource("Resource_7y6a4")
defence = SubResource("Resource_6jy48")
speed = SubResource("Resource_b0lp5")
damage = SubResource("Resource_7l1dn")
expirience = NodePath("ExpirienceComponent")
sprite_for_outline = NodePath("Sprite2D")
trail_particles = NodePath("Sprite2D/GPUParticles2D")
health_bar_pb = NodePath("StatProgressBar")
acts_count = 2
private_abilities = Array[Resource("res://inventory/ability.gd")]([SubResource("Resource_x273b"), ExtResource("3_cs53s"), ExtResource("4_22bg3")])
private_passives = Array[Resource("res://tactical_mode/effect.gd")]([ExtResource("5_avjec")])

[node name="InventoryComponent" parent="." instance=ExtResource("3_yurj5")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -26)
texture = ExtResource("4_n8og0")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Sprite2D"]
z_index = -1
amount = 5
process_material = SubResource("ParticleProcessMaterial_74otp")
texture = ExtResource("4_n8og0")
lifetime = 0.5

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("5_th3mn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_0v1vj")

[node name="StatProgressBar" parent="." instance=ExtResource("6_7tt4r")]
z_index = 1
y_sort_enabled = true
offset_top = -58.0
offset_bottom = -56.0

[node name="ExpirienceComponent" type="Node" parent="."]
script = ExtResource("7_cpjad")
