[gd_scene load_steps=33 format=3 uid="uid://d1jk2a04wq33q"]

[ext_resource type="Script" path="res://tactical_mode/unit/unit.gd" id="1_3454p"]
[ext_resource type="Script" path="res://tactical_mode/unit/components/InventoryComponent.gd" id="2_7afhu"]
[ext_resource type="Script" path="res://tactical_mode/unit/characteristic.gd" id="3_uv67m"]
[ext_resource type="Script" path="res://tactical_mode/unit/components/StatComponent.gd" id="4_5v37f"]
[ext_resource type="Script" path="res://tactical_mode/unit/components/ExpirienceComponent.gd" id="5_8mxrt"]
[ext_resource type="Resource" uid="uid://bhkcohkp7d0tj" path="res://tactical_mode/unit/units/Vamp/res/VampA0.tres" id="6_1t0c8"]
[ext_resource type="Resource" uid="uid://di1372ucdkekv" path="res://tactical_mode/unit/units/Vamp/res/VampA1.tres" id="7_ax6he"]
[ext_resource type="Resource" uid="uid://csshoxe7yf51e" path="res://tactical_mode/unit/units/Vamp/res/VampA2.tres" id="8_r0ub4"]
[ext_resource type="Resource" uid="uid://di4u67c7nk826" path="res://tactical_mode/unit/units/Vamp/res/VampA3.tres" id="9_nqkrh"]
[ext_resource type="Resource" uid="uid://5d8bwek6gx45" path="res://tactical_mode/unit/units/Vamp/res/VampP1.tres" id="10_5dx63"]
[ext_resource type="Resource" uid="uid://drtfi4k16ej2g" path="res://tactical_mode/unit/units/Vamp/res/VampP2.tres" id="11_j0kv6"]
[ext_resource type="Resource" uid="uid://chwc8kck316im" path="res://tactical_mode/effects/MainHeroEffect.tres" id="12_gmwrs"]
[ext_resource type="Texture2D" uid="uid://c73d0qj22co6w" path="res://tactical_mode/unit/units/Vamp/assets/spritesheet.png" id="13_yrav4"]
[ext_resource type="PackedScene" uid="uid://c3oc0616pppep" path="res://GUI/tactical_mode/stat_progress_bar.tscn" id="14_w61fm"]
[ext_resource type="Texture2D" uid="uid://bnrso7wulcsws" path="res://tactical_mode/assets/Shadow.png" id="15_s6ke4"]

[sub_resource type="Resource" id="Resource_gxg75"]
script = ExtResource("2_7afhu")
_gears = {}
gear_slots = {
2: 2,
4: 1
}

[sub_resource type="Resource" id="Resource_ywk01"]
script = ExtResource("3_uv67m")
base = 100.0
cur = 100.0
max_ = 100.0

[sub_resource type="Resource" id="Resource_8hokp"]
script = ExtResource("4_5v37f")
mod_type = 0
characteristic = SubResource("Resource_ywk01")

[sub_resource type="Resource" id="Resource_6gu2l"]
script = ExtResource("3_uv67m")
base = 100.0
cur = 100.0
max_ = 100.0

[sub_resource type="Resource" id="Resource_m422q"]
script = ExtResource("4_5v37f")
mod_type = 3
characteristic = SubResource("Resource_6gu2l")

[sub_resource type="Resource" id="Resource_k16fc"]
script = ExtResource("3_uv67m")
base = 103.0
cur = 103.0
max_ = 103.0

[sub_resource type="Resource" id="Resource_go4ob"]
script = ExtResource("4_5v37f")
mod_type = 1
characteristic = SubResource("Resource_k16fc")

[sub_resource type="Resource" id="Resource_2j2qp"]
script = ExtResource("3_uv67m")
base = 1e+06
cur = 1e+06
max_ = 1e+06

[sub_resource type="Resource" id="Resource_ngsv5"]
script = ExtResource("4_5v37f")
mod_type = 2
characteristic = SubResource("Resource_2j2qp")

[sub_resource type="Resource" id="Resource_iw2g7"]
script = ExtResource("5_8mxrt")
level = 1
expirience = 0
ups = 0

[sub_resource type="Gradient" id="Gradient_h44pd"]
colors = PackedColorArray(1, 0.933333, 0.945098, 1, 0.254902, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_htaen"]
gradient = SubResource("Gradient_h44pd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fk72q"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_htaen")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_plq5k"]
radius = 13.0
height = 58.0

[sub_resource type="Animation" id="Animation_oxaj6"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fxtwy"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbjha"]
_data = {
"idle": SubResource("Animation_oxaj6"),
"run": SubResource("Animation_fxtwy")
}

[node name="GgVamp" type="CharacterBody2D" node_paths=PackedStringArray("sprite_for_outline", "trail_particles", "health_bar_pb", "for_flip_sprites")]
z_index = 1
y_sort_enabled = true
input_pickable = true
script = ExtResource("1_3454p")
unit_name = "Фиди (Вапир)"
inventory = SubResource("Resource_gxg75")
health = SubResource("Resource_8hokp")
defence = SubResource("Resource_m422q")
speed = SubResource("Resource_go4ob")
damage = SubResource("Resource_ngsv5")
expirience = SubResource("Resource_iw2g7")
sprite_for_outline = NodePath("Body")
trail_particles = NodePath("GPUParticles2D")
health_bar_pb = NodePath("StatProgressBar")
for_flip_sprites = [NodePath("Body")]
acts_count = 2
private_abilities = Array[Resource("res://inventory/ability.gd")]([ExtResource("6_1t0c8"), ExtResource("7_ax6he"), ExtResource("8_r0ub4"), ExtResource("9_nqkrh")])
private_passives = Array[Resource("res://tactical_mode/effect.gd")]([ExtResource("10_5dx63"), ExtResource("11_j0kv6"), ExtResource("12_gmwrs")])

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
y_sort_enabled = true
position = Vector2(1, -26)
process_material = SubResource("ParticleProcessMaterial_fk72q")
texture = ExtResource("13_yrav4")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(1, -26)
texture = ExtResource("13_yrav4")

[node name="StatProgressBar" parent="." instance=ExtResource("14_w61fm")]
offset_top = -57.0
offset_bottom = -55.0
metadata/_edit_use_anchors_ = true

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(1, -24)
texture = ExtResource("15_s6ke4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -26)
shape = SubResource("CapsuleShape2D_plq5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bbjha")
}

[connection signal="input_event" from="." to="." method="_on_toggle_select"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
